docs: update all documentation to bilingual format (English primary + Chinese comments)
- USER_GUIDE.md: 657 lines bilingual user guide
- USE_CASES.md: 1079 lines with 13 industry case studies
- COMPETITIVE_ADVANTAGE.md: 850 lines competitive analysis
- package.json: sync npm description with bilingual info

All docs now follow EN primary + CN comments standard for global accessibility